--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     img,
     button,
     input[type="checkbox"],
-    i,span,b,canvas,li {
+    i,span,b,#calendar,li {
       cursor: url("//cdn.jsdelivr.net/gh/pdone/static/img/cursor/link.cur"), pointer !important;
     }
 
