--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     body {
-      font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
+      font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
       cursor: url(//cdn.jsdelivr.net/gh/pdone/static/img/cursor/pointer.cur), default !important;
     }
 
@@ -26,7 +26,12 @@
     img,
     button,
     input[type="checkbox"],
-    i,span,b,#calendar,li {
+    i,
+    span,
+    b,
+    #calendar,
+    li,
+    .box {
       cursor: url("//cdn.jsdelivr.net/gh/pdone/static/img/cursor/link.cur"), pointer !important;
     }
 
@@ -34,10 +39,12 @@
       width: 6px;
       height: 4px;
     }
-    ::-webkit-scrollbar-thumb:hover{
+
+    ::-webkit-scrollbar-thumb:hover {
       /* width:10px; */
-      background:#c74f00
+      background: #c74f00
     }
+
     ::-webkit-scrollbar-thumb {
       border-radius: 10px;
       -webkit-box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.2);
